(coq.theory
 (name mathcomp.real_closed)
 (package coq-mathcomp-real-closed)
 (synopsis "Mathematical Components Library on real closed fields")
 (flags
  -w -projection-no-head-constant
  -w -redundant-canonical-projection
  -w -notation-overridden
  -w +duplicate-clear
  -w +non-primitive-record
  -w +undeclared-scope
  -w -ambiguous-paths
  -w -uniform-inheritance)
 (theories
  mathcomp.ssreflect
  mathcomp.algebra
  mathcomp.field
  mathcomp.bigenough))

